Dark mode fixes
git-svn-id: file:///home/svn/DVA2006@17979 1e6d2d28-e1fb-0310-b8ab-81908d8c6b6a

--- a/static/css/delta_2007/cooler.css
+++ b/static/css/delta_2007/cooler.css
@@ -114,6 +114,10 @@ blockquote cite {
 }
 
 @media (prefers-color-scheme: dark) {
+	table.DVA_defaultSig {
+		background-color: #0f0f3f;
+	}
+	
 	td.postDate {
 		background-color: #0f0f3f;	
 	}
@@ -125,5 +129,9 @@ blockquote cite {
 	blockquote {
 		background-color: #00003f;
 		border: 1px dashed #1a4876;
+	}
+	
+		*.postEdit :link, *.postEdit :visited, *.postEdit :hover {
+		color: #efefff;
 	}
 }
